fix: Promote to UAT (#36)
* fix: energy class sorting (#24)

* energy energy sort fix

* energy sort fix

* energy sort fix

* energy sort fix

* chore: update junit tests for BaseKafkaConsumerTest and ProductFileConsumerService (#23)

* junit update for BaseKafkaConsumerTest and ProductFileConsumerServiceTest

* junit update

---------

Co-authored-by: Vitolo-Andrea <andrea.vitolo@emeal.nttdata.com>

* update product mapper to dto replace N\A with null and remova capacity from product name (#27)

* RDB-147 initializing api

* added junit

* fix: check csv category Italian and return Italian value  (#29)

* check csv category row in italy, return italy value in batch, product name and category end fix sorting by category and batch name

* batch name list update

* singular and plural

* singular and plural

* product file list update

* ERROR_CATEGORY_COOKINGHOBS fix

* gtinCode critiria fix

* category to it in productfilemapper

* junit fix

* fix

* fixed junit

* fix: [RDB-144] update products filtering (#34)

* first impl

* first impl

* sonar fix

* productName and status filtering update

* docker and error config update

* removed productCode from filtering

* update product mapper

* fix: [RDB-146] check DB products during upload (#31)

* Added control on DB products

* RDB-147 initializing api

* added junit

* fix: check csv category Italian and return Italian value  (#29)

* check csv category row in italy, return italy value in batch, product name and category end fix sorting by category and batch name

* batch name list update

* singular and plural

* singular and plural

* product file list update

* ERROR_CATEGORY_COOKINGHOBS fix

* gtinCode critiria fix

* category to it in productfilemapper

* junit fix

* fix

* fixed junit

* refactor

* jUnit update

* jUnit update

* jUnit update

* jUnit update

* fix validateRecords

* restored validateRecords

* error message update

---------

Co-authored-by: DanieleRanaldo <Daniele.Ranaldo@nttdata.com>
C