@@ -35,7 +35,7 @@ public class ProductMapper {
       .status(entity.getStatus())
       .model(entity.getModel())
       .productGroup(entity.getProductGroup())
-      .category(entity.getCategory())
+      .category(CATEGORIES_TO_IT_S.get(entity.getCategory()))
       .brand(entity.getBrand())
       .eprelCode(entity.getEprelCode())
       .gtinCode(entity.getGtinCode())
@@ -43,13 +43,10 @@ public class ProductMapper {
       .countryOfProduction(entity.getCountryOfProduction())
       .energyClass(entity.getEnergyClass())
       .linkEprel(generateEprelUrl(entity.getProductGroup(), entity.getEprelCode()))
-      .batchName(entity.getCategory()+"_"+entity.getProductFileId()+".csv")
-      .productName(
-        entity.getCategory() +" " +
-        entity.getBrand()+" "+
-        entity.getModel()
-      )
+      .batchName(CATEGORIES_TO_IT_P.get(entity.getCategory())+"_"+entity.getProductFileId()+".csv")
+      .productName(entity.getProductName())
       .capacity(("N\\A").equals(entity.getCapacity()) ? null : entity.getCapacity())
+      .motivation(entity.getMotivation())
       .build();
   }
   public static Product mapCookingHobToProduct(CSVRecord csvRecord, String orgId, String productFileId) {
@@ -65,10 +62,19 @@ public class ProductMapper {
       .brand(csvRecord.get(BRAND))
       .model(csvRecord.get(MODEL))
       .capacity("N\\A")
+      .productName(CATEGORIES_TO_IT_S.get(COOKINGHOBS) +" "+
+        csvRecord.get(BRAND)+" "+
+        csvRecord.get(MODEL)
+      )
       .build();
   }
 
   public static Product mapEprelToProduct(CSVRecord csvRecord, EprelProduct eprelData, String orgId, String productFileId, String category) {
+    String capacity = mapCapacity(category,eprelData);
+    String productName = CATEGORIES_TO_IT_S.get(category) + " " +
+      eprelData.getSupplierOrTrademark() + " " +
+      eprelData.getModelIdentifier() +
+      (!"N\\A".equals(capacity) ? " " + capacity : "");
     return Product.builder()
       .productFileId(productFileId)
       .organizationId(orgId)
@@ -83,7 +89,8 @@ public class ProductMapper {
       .brand(eprelData.getSupplierOrTrademark())
       .model(eprelData.getModelIdentifier())
       .energyClass(mapEnergyClass(eprelData.getEnergyClass()))
-      .capacity(mapCapacity(category,eprelData))
+      .capacity(capacity)
+      .productName(productName)
       .build();
   }
 
@@ -148,7 +155,7 @@ public class ProductMapper {
         .setTrim(true)
         .build();
       List<CSVRecord> records = format.parse(new StringReader(out.toString())).getRecords();
-      return records.isEmpty() ? null : records.get(0);
+      return records.isEmpty() ? null : records.getFirst();
     } catch (Exception e) {
       return null;
     }
